Done with Task 00 and 01.

--- a/_04_Assignment_04/Assignments 00 to 05/00_intro_python.ipynb
+++ b/_04_Assignment_04/Assignments 00 to 05/00_intro_python.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#00_intro_python\n",
+        "#**00_intro_python**\n",
         "##01_add_two_numbers"
       ],
       "metadata": {
@@ -45,7 +45,7 @@
         "id": "FJLNAaYw2OYc",
         "outputId": "a43da1c5-ca1e-42b0-a929-6636c38cc76f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,7 +85,7 @@
         "id": "DjzIprec3Mal",
         "outputId": "715d10ff-fe0e-4be7-d4ed-27001f12038c"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
         "id": "i-OQMNvfGAKK",
         "outputId": "39b15159-9898-4757-f98e-a00752ac4628"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +172,7 @@
         "id": "pe0Ko-UuHhFK",
         "outputId": "c9a4098b-d99e-4d6e-923c-4394d4951c2d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +215,7 @@
         "id": "n7BG8mqiKICS",
         "outputId": "5cdc9868-3926-4aeb-8425-52b1d9f11cda"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +255,7 @@
         "id": "edii4sLzLf8a",
         "outputId": "565baee1-966c-4e54-8a05-cb709403eb09"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
